2008-07-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/macppc.h (UNEXEC, NO_TERMIO): Don't define, the s/ files
	define them.

2008-07-10  Kenichi Handa  <handa@m17n.org>

	* xfont.c (xfont_open): Log the reason of failure.

2008-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fontset.c (fontset_get_font_group):
	* font.c (font_check_otf): Specify argument types.

2008-07-09  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_utf_8): Set detect_info->found only when
	non-ASCII char is found.

	* fontset.c (fontset_compare_rfontdef): Fix plus/minus.
	(reorder_font_vector): Change the arg preferred_family to font.
	Prefer the spec matching with font.
	(fontset_get_font_group): New function.
	(fontset_find_font): Change the format of an element of a realized
	fontset.  Use fontset_get_font_group.
	(fontset_font): Try the current fontset, the default fontset, the
	fallbacks of the current fonset, and the fallbacks of the default
	fontset in this order.
	(face_for_char): Delete the shortcut to use the current font.
	(fontset_from_font): Don't set fonts for Latin in the fontset.

	* font.h (font_make_object, font_match_p): Adjust prototypes.

	* ftfont.h [FT_BDF_H]: Include FT_BDF_H.

	* font.c (font_make_object): New arg entity and pixelsize.
	(font_check_otf_features, font_check_otf): New functions.
	(font_match_p): Check :lang, :script, and :otf properties.

	* xfont.c (xfont_open): Adjust it for the change of
	font_make_object.
	(xfont_text_extents): Fix initial setting of metrics.

	* ftfont.c (struct ftfont_info): New member index, delete member
	fc_charset_idx.  Make the member order compatible with struct
	xftfont_info.
	(fc_charset_table): Change charset names to registry names.
	(ftfont_pattern_entity): Delete the args registry and
	fc_charset_idx.  Change the value of :font-entity property
	to (FONTNAME . INDEX).  Always set :registry property to
	`iso10646-1'.
	(struct ftfont_cache_data): New struct.
	(ftfont_lookup_cache): New arg for_face.